Added readTopPersons (as API, query and as dynamic client side xhr script on homepage) and added dynamic changeLocale function
