# nodeTestApp16/nodeTestApp16/api/controllers/json_api_graph.js
@@ -8,7 +8,7 @@ var jsonApiGraph = function () {
   var resultType = ["row"];
 
   return {
-    readGraph: function(req, res) {
+    readAllGraph: function(req, res) {
       var query = that.queries.readAllGraph;
       var params = {};
       var callback = that.callbacks.graph(res, '', '', '', 'readGraph').api;
@@ -17,6 +17,18 @@ var jsonApiGraph = function () {
 
       that.requests.cypherRequest(query, params, resultType, includeStats, callback);
     },
+    readTopPersons: function(req, res) {
+      var relationshipName = req.swagger.params.relationshipName.value;
+
+      var query = that.queries.search.readTopPersons[relationshipName];
+      var params = {};
+      var callback = that.callbacks.graph(res, that.nodeType, '', '', 'readTopPersons').api;
+
+      resultType = ["row"];
+
+      that.requests.cypherRequest(query, params, resultType, includeStats, callback);
+    },
+
   };
 };
 
